@@ -284,10 +284,10 @@ Please use File - Load Connections for normal connection files!</value>
     <value>Check succeeded!</value>
   </data>
   <data name="strCcEOLFailed" xml:space="preserve">
-    <value>The (RDP) Sessions feature requires that you have a registered copy of eolwtscom.dll on your system.
-mRemoteNG ships with this component but will not register it automatically unless you run the setup package.
-To do register it manually do this: Open up the run dialog (Start - Run) and enter the following: regsvr32 "c:\Program Files\mRemoteNG\eolwtscom.dll" (Where c:\Program Files\mRemoteNG\ is the path to your mRemoteNG installation).
-If you are still not able to pass this check or use the (RDP) Sessions feature in mRemoteNG please consult the mRemoteNG Forum at http://forum.mremoteng.org/</value>
+    <value>The (RDP) Sessions feature requires that you have a copy of eolwtscom.dll registered on your system.
+mRemoteNG ships with this component but it is not registered automatically if you do not use the mRemoteNG Installer.
+To register it manually, run the following command from an elevated command prompt: regsvr32 "C:\Program Files\mRemoteNG\eolwtscom.dll" (where C:\Program Files\mRemoteNG\ is the path to your mRemoteNG installation).
+If this check still fails or you are unable to use the (RDP) Sessions feature, please consult the mRemoteNG Forum at http://forum.mremoteng.org/.</value>
   </data>
   <data name="strCcEOLOK" xml:space="preserve">
     <value>EOLWTSCOM was found and seems to be registered properly.</value>
