@@ -5,6 +5,7 @@
   Fixed issue MR-424 - Import of a few Linux SSH2 hosts discovered via the port scan tool results in a UE
   Fixed issue MR-439 - MRemoteNG 1.70 does not start
   Fixed issue MR-440 - RDP import with non-standard port
+  Fixed issue MR-443 - Instructions for eolwtscom.dll registration for Portable version are inaccurate
   Fixed issue MR-446 - Putty saved sessions show in connection panel
   Fixed issue MR-471 - PuTTY Saved Sessions disappears from connection list
   Added PuTTY Session Settings command to the Config panel for PuTTY Saved Sessions.
